<?xml version="1.0"?>
<package format="2">
  <name>transform_to_tf</name>
  <version>0.0.0</version>
  <description>
    Converts a transformation message to a tf.
  </description>
  <url></url>
  <author>Alex Millane</author>
  <maintainer email="alex.millane@gmail.com">Alex Millane</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Dependencies. -->
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>glog_catkin</depend>

</package>
